public/assets/css/input.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.grad-bg {
    background: linear-gradient(to bottom, #000033 0rem, black 24rem, black 100%) no-repeat,
                linear-gradient(to top, #000033 0rem, black 24rem, black 100%) no-repeat,
                black; /* Fallblack */
    background-size: 100% 24rem, 100% 24rem, 100%;
    background-position: top, bottom, center;
    min-height: 100vh; /* Ensures the gradient covers the full viewport height */
}

@layer base {
    a:not(header > a):not(h2 > a):not(h3 > a):not(h4 > a) {
        @apply text-[#4477FF] underline;
        text-decoration-thickness: 1px;
        text-underline-offset: 4px;
    }

    /* For mobile devices */
    a:active,
    a:focus,
    a:focus-visible,
    a:focus-within,
    a:hover,
    a:target {
        @apply text-[#00ffff];
    }

    /* Transition for larger screens */
    @media (min-width: 640px) {
        a:hover {
            @apply transition duration-500 ease-in-out text-[#00ffff];
        }
    }

    h1 > a,
    h2 > a,
    h3 > a {
        @apply text-[#ffffff] no-underline font-bold;
    }

    h1,
    h2,
    h3 {
        @apply my-8 text-[#ffffff] no-underline;
    }

    h2 {
        @apply text-2xl md:text-xl;
    }

    h3 {
        @apply text-xl font-bold md:text-lg;
    }

    p {
        @apply my-2;
    }

    strong,
    li::marker,
    code:not(pre > code){
        @apply text-[#ffffff];
    }

    pre,
    blockquote,
    aside {
        @apply my-3 rounded;
    }

    pre {
        @apply bg-[#222222];
    }

    blockquote,
    aside {
        @apply bg-[#000033];
    }

    code:not(pre > code) {
        @apply bg-[#444444] overflow-x-auto whitespace-pre-wrap break-words;
    }

    code {
        font-family: 'JetBrainsMono', monospace;
    }

    blockquote,
    aside {
        @apply border-l-4 border-solid border-[#3366FF] p-4 text-[#ffffff];
    }

    .dialogue {
        @apply py-0;
    }

    blockquote {
        @apply italic;
    }

    ul {
        @apply list-disc;
    }

    ul ul {
        list-style-type: circle;
    }

    ol {
        @apply list-decimal;
    }

    ul,
    ol {
        @apply pl-4 list-inside;
    }

    li::marker {
        @apply font-bold;
    }

    figure {
        @apply my-8;
    }

    img {
        @apply max-w-[520px] mx-auto w-full block rounded-sm h-auto md:w-1/2;
    }

    figcaption {
        @apply text-[#999999] text-center text-base my-2;
    }

    sup {
        @apply text-base;
        vertical-align: baseline;
        position: relative;
        top: 0;
        margin-left: 0.2em;
    }

    sup > a:before {
        content: "[";
    }

    sup > a:after {
        content: "]";
    }

    sup > a {
        @apply no-underline;
    }

    ruby {
        display: ruby;
    }

    /* Firefox-specific adjustment */
    @-moz-document url-prefix() {
        rt {
            position: relative;
            top: 1em;
            margin-left: -2em;
        }
    }

    table:not(.metadata) {
        border-collapse: collapse;
        width: 100%;
    }

    table:not(.metadata) {
        @apply my-8;
    }

    th,
    td:not(.metadata td) {
        @apply text-left p-2;
    }

    td:not(.metadata td) {
        border: 1px solid #999;
    }

    th {
        border: 1px solid #999;
        background-color: #000033;
        font-weight: bold;
        color: #fff;
    }

}

/*a:hover {*/
/*    text-shadow: 0 0 24px;*/
/*}*/

.blockquote figcaption {
    text-align: right;
}

.blockquote figcaption:before {
    content:"\2014"
}

/* Stupid Parsedown inserts a <p> in each <li> the footnotes section. */
.footnotes p {
    display: inline;
}

/* Stupid Parsedown inserts a <hr> the footnotes section. */
.footnotes hr {
    display: none;
}

.footnotes ol li {
    margin-bottom: 1rem;
}

:root {
    font-family: "InterVariable", Helvetica, Arial, sans-serif;
    font-feature-settings: 'liga' 1, 'calt' 1;  /* fix for Chrome */
    font-weight: 400;
}

/* Settings for if user's browser supports variable fonts */
@supports (font-variation-settings: normal) {
  :root {
      font-family: "InterVariable", sans-serif;
      font-optical-sizing: auto;
  }
}

@font-face {
    font-family: InterVariable;
    font-style: normal;
    font-weight: 100 900;
    font-display: swap;
    src: url("/assets/fonts/InterVariable.woff2") format("woff2");
}

@font-face {
    font-family: InterVariable;
    font-style: italic;
    font-weight: 100 900;
    font-display: swap;
    src: url("/assets/fonts/InterVariable-Italic.woff2") format("woff2");
}

@font-face {
    font-family: 'HanSerif';
    src:  url('/assets/fonts/HanSerif-Regular-subset.woff') format('woff'),
          url('/assets/fonts/HanSerif-Regular-subset.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-Regular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-Bold.woff2') format('woff2');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-BoldItalic.woff2') format('woff2');
    font-weight: bold;
    font-style: italic;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-Italic.woff2') format('woff2');
    font-weight: normal;
    font-style: italic;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-Light.woff2') format('woff2');
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-LightItalic.woff2') format('woff2');
    font-weight: 300;
    font-style: italic;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-Medium.woff2') format('woff2');
    font-weight: 500;
    font-style: normal;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-MediumItalic.woff2') format('woff2');
    font-weight: 500;
    font-style: italic;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-SemiBold.woff2') format('woff2');
    font-weight: 600;
    font-style: normal;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-SemiBoldItalic.woff2') format('woff2');
    font-weight: 600;
    font-style: italic;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-ExtraBold.woff2') format('woff2');
    font-weight: 800;
    font-style: normal;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-ExtraBoldItalic.woff2') format('woff2');
    font-weight: 800;
    font-style: italic;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-ExtraLight.woff2') format('woff2');
    font-weight: 200;
    font-style: normal;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-ExtraLightItalic.woff2') format('woff2');
    font-weight: 200;
    font-style: italic;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-Thin.woff2') format('woff2');
    font-weight: 100;
    font-style: normal;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('/assets/fonts/JetBrainsMono/JetBrainsMono-ThinItalic.woff2') format('woff2');
    font-weight: 100;
    font-style: italic;
}


/* Loading github-dark.min.css directly here to more easily re-use colors, etc. */
pre code.hljs {display:block;overflow-x:auto;padding:.5rem}code.hljs{padding:0}
.hljs{color:#c9d1d9;}.hljs-doctag,.hljs-keyword,.hljs-meta .hljs-keyword,.hljs-template-tag,.hljs-template-variable,.hljs-type,.hljs-variable.language_{color:#ff7b72}.hljs-title,.hljs-title.class_,.hljs-title.class_.inherited__,.hljs-title.function_{color:#d2a8ff}.hljs-attr,.hljs-attribute,.hljs-literal,.hljs-meta,.hljs-number,.hljs-operator,.hljs-selector-attr,.hljs-selector-class,.hljs-selector-id,.hljs-variable{color:#79c0ff}.hljs-meta .hljs-string,.hljs-regexp,.hljs-string{color:#a5d6ff}.hljs-built_in,.hljs-symbol{color:#ffa657}.hljs-code,.hljs-comment,.hljs-formula{color:#8b949e}.hljs-name,.hljs-quote,.hljs-selector-pseudo,.hljs-selector-tag{color:#7ee787}.hljs-subst{color:#c9d1d9}.hljs-section{color:#1f6feb;font-weight:700}.hljs-bullet{color:#f2cc60}.hljs-emphasis{color:#c9d1d9;font-style:italic}.hljs-strong{color:#c9d1d9;font-weight:700}.hljs-addition{color:#aff5b4;background-color:#033a16}.hljs-deletion{color:#ffdcd7;background-color:#67060c}

